// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pie component should render correctly 1`] = `
<div
  className="ins-matrix-chart"
  widget-id="test-matrix"
  widget-type="InsightsMatrix"
>
  <svg
    height={540}
    width={540}
  >
    <Axis
      pad={10}
      shift={10}
      size={430}
    >
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            215,
            0,
          ]
        }
        key="0"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "First",
              },
            ]
          }
          color="#FF6666"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            0,
          ]
        }
        key="1"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Second",
              },
            ]
          }
          color="#f0ab00"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            215,
            215,
          ]
        }
        key="2"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Third",
              },
            ]
          }
          color="#bee1f4"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            215,
          ]
        }
        key="3"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Fourth",
              },
            ]
          }
          color="#d1d1d1"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
    </Axis>
    <Labels
      color="#414241"
      size={430}
      values={
        Object {
          "subLabels": Object {
            "xLabels": Array [
              "Low",
              "High",
            ],
            "yLabels": Array [
              "Low",
              "High",
            ],
          },
          "xLabel": "Risk of change",
          "yLabel": "Impact",
        }
      }
    />
  </svg>
  <div
    className="tooltip"
  />
</div>
`;

exports[`Pie component should render with config 1`] = `
<div
  className="ins-matrix-chart"
  widget-id="test-matrix"
  widget-type="InsightsMatrix"
>
  <svg
    height={2}
    width={2}
  >
    <Axis
      pad={15}
      shift={2}
      size={10}
    >
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            5,
            0,
          ]
        }
        key="0"
        size={5}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "First",
              },
            ]
          }
          color="blue"
          config={
            Object {
              "colors": Array [
                "yellow",
                "blue",
                "red",
                "black",
              ],
              "gridSize": 10,
              "max": 4,
              "min": 0,
              "pad": 15,
              "shift": 2,
              "size": 2,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            0,
          ]
        }
        key="1"
        size={5}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Second",
              },
            ]
          }
          color="yellow"
          config={
            Object {
              "colors": Array [
                "yellow",
                "blue",
                "red",
                "black",
              ],
              "gridSize": 10,
              "max": 4,
              "min": 0,
              "pad": 15,
              "shift": 2,
              "size": 2,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            5,
            5,
          ]
        }
        key="2"
        size={5}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Third",
              },
            ]
          }
          color="black"
          config={
            Object {
              "colors": Array [
                "yellow",
                "blue",
                "red",
                "black",
              ],
              "gridSize": 10,
              "max": 4,
              "min": 0,
              "pad": 15,
              "shift": 2,
              "size": 2,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            5,
          ]
        }
        key="3"
        size={5}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Fourth",
              },
            ]
          }
          color="red"
          config={
            Object {
              "colors": Array [
                "yellow",
                "blue",
                "red",
                "black",
              ],
              "gridSize": 10,
              "max": 4,
              "min": 0,
              "pad": 15,
              "shift": 2,
              "size": 2,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
    </Axis>
    <Labels
      color="#414241"
      size={10}
      values={
        Object {
          "subLabels": Object {
            "xLabels": Array [
              "Low",
              "High",
            ],
            "yLabels": Array [
              "Low",
              "High",
            ],
          },
          "xLabel": "Risk of change",
          "yLabel": "Impact",
        }
      }
    />
  </svg>
  <div
    className="tooltip"
  />
</div>
`;

exports[`Pie component should render with labels 1`] = `
<div
  className="ins-matrix-chart"
  widget-id="test-matrix"
  widget-type="InsightsMatrix"
>
  <svg
    height={540}
    width={540}
  >
    <Axis
      pad={10}
      shift={10}
      size={430}
    >
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            215,
            0,
          ]
        }
        key="0"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "First",
              },
            ]
          }
          color="#FF6666"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            0,
          ]
        }
        key="1"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Second",
              },
            ]
          }
          color="#f0ab00"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            215,
            215,
          ]
        }
        key="2"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Third",
              },
            ]
          }
          color="#bee1f4"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
      <Segment
        className={null}
        color="none"
        coords={
          Array [
            0,
            215,
          ]
        }
        key="3"
        size={215}
      >
        <NodeElement
          cellCoord={2}
          cellData={
            Array [
              Object {
                "label": "Fourth",
              },
            ]
          }
          color="#d1d1d1"
          config={
            Object {
              "colors": Array [
                "#f0ab00",
                "#FF6666",
                "#d1d1d1",
                "#bee1f4",
              ],
              "gridSize": 430,
              "max": 10,
              "min": 0,
              "pad": 10,
              "shift": 10,
              "size": 540,
            }
          }
          key="2-2"
          onClick={[Function]}
          rowCoord={2}
        />
      </Segment>
    </Axis>
    <Labels
      color="#414241"
      size={430}
      values={
        Object {
          "subLabels": Object {
            "xLabels": Array [
              "Low",
              "High",
            ],
            "yLabels": Array [
              "Low",
              "High",
            ],
          },
          "xLabel": "Risk of change",
          "yLabel": "Impact",
        }
      }
    />
  </svg>
  <div
    className="tooltip"
  />
</div>
`;
